Add image to chicken soup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p>
+            Want some great <a href="recipes/chicken-soup.html"> Chicken Soup?</a>
+        </p>
     </body>
 
 
