--- a/recipes/chicken-soup.html
+++ b/recipes/chicken-soup.html
@@ -8,6 +8,12 @@
 
     <body>
         <h1>Chicken Soup</h1>
+        <img src="../images/chicken-soup.jpg">
+        <p>
+            WOW! Greek chicekn soup. Good for the soul, makes you warm, what more can you want?! Below are the ingredients and the description
+            for how to make this beautifully crafted chicken soup. As George Bush says:
+            <p><h3><strong>"Chicken soup is good for the soul!"</strong></h3></p>
+        </p>
     </body>
 
 
