--- a/recipes/chicken-soup.html
+++ b/recipes/chicken-soup.html
@@ -12,8 +12,38 @@
         <p>
             WOW! Greek chicekn soup. Good for the soul, makes you warm, what more can you want?! Below are the ingredients and the description
             for how to make this beautifully crafted chicken soup. As George Bush says:
-            <p><h3><strong>"Chicken soup is good for the soul!"</strong></h3></p>
+            <p><h4><strong>"Chicken soup is good for the soul!"</strong></h4></p>
         </p>
+        <p><h3>Ingredients List</h3><</p>
+        <ul>
+            <li>3 tablespoons olive oil</li>
+            <li>1 sweet onion, quartered and slived into thin strips</li>
+            <li>8 cloves garlic, minced</li>
+            <li>10 cups chicken broth</li>
+            <li>2 skinless, boneless chicken breasts</li>
+            <li>1 lemon, <strong>zested</strong></li>
+            <li>1/2 teaspoon red pepper flakes</li>
+            <li>1 cup Israeli (large pearl) couscous</li>
+            <li>1 teaspoon salt</li>
+            <li>ground black pepper to taste</li>
+            <li>1/2 (4 ounce) package crumbled feta cheese</li>
+            <li>1/3 cup chopped fresh chives</li>
+        </ul>
+        <p><h3>Directions</h3></p>
+        <ol>
+            <li>Place olive oil in a large sauce pot over medium-low heat. 
+                Saute onion and garlic in the hot oil until softened, 
+                3 to 4 minutes.</li>
+            <li>Add chicken broth, chicken breasts, lemon zest, and red pepper flakes 
+                to the pot. Increase heat to high, cover, and bring to a boil. Reduce 
+                heat to medium and simmer for 5 minutes. Stir in pearl couscous, salt, 
+                and pepper. Simmer for 5 minutes more. Remove from heat.</li>
+            <li>Remove chicken breasts from the pot using tongs. Use a fork 
+                and the tongs to shred the chicken. <strong>It's YUMMA!</strong> 
+                Return to the pot. Stir feta cheese and chives into the soup. Taste 
+                and season as needed. Serve warm.</li>
+        </ol>
+
     </body>
 
 
