Create fajitas recipe page

--- a/recipes/chicken-soup.html
+++ b/recipes/chicken-soup.html
@@ -14,7 +14,7 @@
             for how to make this beautifully crafted chicken soup. As George Bush says:
             <p><h4><strong>"Chicken soup is good for the soul!"</strong></h4></p>
         </p>
-        <p><h3>Ingredients List</h3><</p>
+        <p><h3>Ingredients List</h3></p>
         <ul>
             <li>3 tablespoons olive oil</li>
             <li>1 sweet onion, quartered and slived into thin strips</li>
@@ -41,7 +41,7 @@
             <li>Remove chicken breasts from the pot using tongs. Use a fork 
                 and the tongs to shred the chicken. <strong>It's YUMMA!</strong> 
                 Return to the pot. Stir feta cheese and chives into the soup. Taste 
-                and season as needed. Serve warm.</li>
+                and season as needed. Serve warm. </li>
         </ol>
 
     </body>
