Add fajitas recipe directions and ingredients

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -8,10 +8,41 @@
 
     <body>
         <h1>Crazy Sizzlin' Fajitas</h1>
-        
+        <img src="../images/fajitas.jpg">
         <p>
-
+            Feeling froggy? Feeling spicy? This is the perfect dish to make 
+            for visitors, your sassy neighbor, or anyone who enjoys some
+            sizzlin' spicy yummy fajitas. 
         </p>
+        <p><h3>Ingredients List</h3></p>
+        <ul>
+            <li>8 (6 inch) flour tortillas</li>
+            <li>1 pound skiless, boneless chicken brest halves - cut into strips</li>
+            <li>2 small red bell peppers, cut into strips</li>
+            <li>2 teaspoons Jamaican jerk seasoning</li>
+            <li>1/8 teaspoon ground black pepper</li>
+            <li>cooking spray</li>
+            <li>4 slices canned pineapple</li>
+            <li>1 tablespoon vegetable oil</li>
+            <li>chopped fresh cilantro</li>
+            <li>lime wedges</li>
+        </ul>
+        <p><h3>Directions</h3></p>
+        <ol>
+            <li>Preheat the oven to 350 degrees F. Wrap tortillas in aluminum
+                foil and heat in the oven.</li>
+            <li>Combine chicken, bell peppers, jerk seasoning, and pepper 
+                in a large bowl; set aside.</li>
+            <li>Heat a large skillet over medium-high heat, and coat with 
+                cooking spray. Add pineapple and cook until brown, 4 to 6 
+                minutes. Remove pineapple from the pan and set aside.</li>
+            <li>Return the skillet to the stovetop and heat vegetable 
+                oil. Add chicken and bell peppers; cook and stire until 
+                chicken is no longer pink, about 6 minutes.</li>
+            <li>Stir in cooked pineapple. Serve fajita mixture in warmed 
+                tortillas garnished with cilantro and a squeeze of lime.</li>
+        </ol>
+        <p><strong><a href=../index.html>Return to main page</a></strong></p>
     </body>
 
 
