--- a/recipes/chicken-soup.html
+++ b/recipes/chicken-soup.html
@@ -10,7 +10,7 @@
         <h1>Chicken Soup</h1>
         <img src="../images/chicken-soup.jpg">
         <p>
-            WOW! Greek chicekn soup. Good for the soul, makes you warm, what more can you want?! Below are the ingredients and the description
+            WOW! Greek chicken soup. Good for the soul, makes you warm, what more can you want?! Below are the ingredients and the description
             for how to make this beautifully crafted chicken soup. As George Bush says:
             <p><h4><strong>"Chicken soup is good for the soul!"</strong></h4></p>
         </p>
@@ -43,6 +43,7 @@
                 Return to the pot. Stir feta cheese and chives into the soup. Taste 
                 and season as needed. Serve warm. </li>
         </ol>
+        <p><a href="../index.html">Return to main page</a></p>
 
     </body>
 
